Switch executors to use virtual threads where possible (#704)
Co-authored-by: Bryan Burkholder <bryanlb@users.noreply.github.com>